[gd_scene load_steps=2 format=3 uid="uid://ddyqv7vduj3ps"]

[ext_resource type="Script" path="res://LevelChangeArea.gd" id="1_apnx2"]

[node name="LevelChangeArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_apnx2")

[node name="LevelChangeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LevelChangeTimer" to="." method="_on_level_change_timer_timeout"]
